add rate mode, update readme
